<resources>
    <string name="app_name">Prograquest</string>
    <string name="evaluacion">Evaluacion</string>
    <string name="lecciones">Lecciones</string>
    <string name="salida_del_codigo">Salida Del Codigo</string>
    <string name="ejecutar">Ejecutar</string>
    <string name="escribe_tu_c_digo_python">Escribe tu código Python</string>
    <string name="cambiar_imagen">Cambiar imagen</string>
    <string name="profile_image">Profile Image</string>
    <string name="enviar">Enviar</string>
    <string name="opci_n_3">Opción 3</string>
    <string name="opci_n_2">Opción 2</string>
    <string name="opci_n_1">Opción 1</string>
    <string name="sentencias_condicionales_while">Sentencias Condicionales WHILE</string>
    <string name="sentencias_condicionales_if">Sentencias Condicionales IF</string>
    <string name="_1_introducci_n_los_bucles_while_permiten_ejecutar_un_bloque_de_c_digo_repetidamente_mientras_se_cumpla_una_condici_n_son_tiles_cuando_el_n_mero_de_iteraciones_no_est_definido_de_antemano_ya_que_dependen_de_la_evaluaci_n_continua_de_una_condici_n_l_gica">1. Introducción Los bucles while permiten ejecutar un bloque de código repetidamente mientras se cumpla una condición. Son útiles cuando el número de iteraciones no está definido de antemano, ya que dependen de la evaluación continua de una condición lógica.</string>
    <string name="_2_bucle_while_en_java_en_java_la_estructura_del_bucle_while_es_la_siguiente">2. Bucle while en Java En Java, la estructura del bucle while es la siguiente:</string>
    <string name="en_este_ejemplo_el_bucle_se_ejecuta_mientras_la_variable_i_sea_menor_que_5_en_cada_iteraci_n_el_valor_de_i_se_incrementa_asegurando_que_eventualmente_la_condici_n_se_vuelva_falsa">En este ejemplo, el bucle se ejecuta mientras la variable i sea menor que 5. En cada iteración, el valor de i se incrementa, asegurando que eventualmente la condición se vuelva falsa.</string>
    <string name="errores_comunes_en_java_olvidar_actualizar_la_condici_n_dentro_del_bucle_esto_puede_causar_bucles_infinitos_definir_mal_la_condici_n_inicial_si_la_condici_n_es_falsa_desde_el_inicio_el_bucle_no_se_ejecutar_acceder_a_variables_no_inicializadas_aseg_rate_de_declarar_e_inicializar_las_variables_antes_de_usarlas_en_la_condici_n">Errores comunes en Java: Olvidar actualizar la condición dentro del bucle: Esto puede causar bucles infinitos. Definir mal la condición inicial: Si la condición es falsa desde el inicio, el bucle no se ejecutará. Acceder a variables no inicializadas: Asegúrate de declarar e inicializar las variables antes de usarlas en la condición.</string>
    <string name="_3_bucle_while_en_python_en_python_la_estructura_del_bucle_while_es_similar_pero_m_s_concisa">3. Bucle while en Python En Python, la estructura del bucle while es similar pero más concisa:</string>
    <string name="en_este_ejemplo_el_bucle_se_ejecuta_mientras_la_condici_n_i_5_sea_verdadera_la_variable_i_se_incrementa_en_cada_iteraci_n_evitando_un_bucle_infinito"><![CDATA[En este ejemplo, el bucle se ejecuta mientras la condición i < 5 sea verdadera. La variable i se incrementa en cada iteración, evitando un bucle infinito.]]></string>
    <string name="errores_comunes_en_python_olvidar_actualizar_la_condici_n_al_igual_que_en_java_esto_puede_llevar_a_bucles_infinitos_indentaci_n_incorrecta_python_requiere_una_indentaci_n_consistente_de_lo_contrario_se_generar_un_indentationerror_falta_del_car_cter_en_la_declaraci_n_del_while_esto_producir_un_syntaxerror">Errores comunes en Python: Olvidar actualizar la condición: Al igual que en Java, esto puede llevar a bucles infinitos. Indentación incorrecta: Python requiere una indentación consistente; de lo contrario, se generará un IndentationError. Falta del carácter : en la declaración del while: Esto producirá un SyntaxError.</string>
    <string name="en_java_los_errores_m_s_comunes_incluyen_olvidar_incrementar_o_modificar_la_variable_de_control_puede_resultar_en_un_bucle_infinito_definir_mal_la_condici_n_puede_evitar_que_el_bucle_se_ejecute_en_python_los_errores_frecuentes_son">En Java, los errores más comunes incluyen: • Olvidar incrementar o modificar la variable de control puede resultar en un bucle infinito. • Definir mal la condición puede evitar que el bucle se ejecute.En Python, los errores frecuentes son:</string>
    <string name="en_python_los_errores_frecuentes_son_la_falta_de_una_correcta_indentaci_n_o_el_uso_de_diferentes_tabulaciones_puede_generar_errores_si_se_olvida_actualizar_la_condici_n_el_programa_puede_quedar_atrapado_en_un_bucle_infinito">En Python, los errores frecuentes son: • La falta de una correcta indentación o el uso de diferentes tabulaciones puede generar errores. • Si se olvida actualizar la condición, el programa puede quedar atrapado en un bucle infinito.</string>
    <string name="_1_introducci_n_las_sentencias_if_permiten_ejecutar_un_bloque_de_c_digo_solo_si_se_cumple_una_determinada_condici_n_l_gica_son_fundamentales_en_la_toma_de_decisiones_dentro_de_cualquier_programa_su_correcto_uso_asegura_un_flujo_de_control_eficiente_y_predecible">1. Introducción Las sentencias if permiten ejecutar un bloque de código solo si se cumple una determinada condición lógica. Son fundamentales en la toma de decisiones dentro de cualquier programa. Su correcto uso asegura un flujo de control eficiente y predecible.</string>
    <string name="_2_sentencia_if_en_java_en_java_una_sentencia_if_sigue_esta_estructura_b_sica">2. Sentencia if en Java En Java, una sentencia if sigue esta estructura básica:</string>
    <string name="el_bloque_de_c_digo_dentro_del_if_se_ejecutar_solo_si_la_condici_n_l_gica_evaluada_entre_par_ntesis_es_true_por_ejemplo_si_declaramos_una_variable_int_x_10_y_comprobamos_if_x_5_el_mensaje_asociado_se_imprimir_porque_la_condici_n_es_verdadera"><![CDATA[El bloque de código dentro del if se ejecutará solo si la condición lógica evaluada entre paréntesis es true. Por ejemplo, si declaramos una variable int x = 10; y comprobamos if (x > 5), el mensaje asociado se imprimirá porque la condición es verdadera.]]></string>
    <string name="un_error_com_n_en_java_es_omitir_los_par_ntesis_en_la_condici_n_lo_que_generar_un_error_de_compilaci_n_otro_problema_puede_surgir_si_no_se_utilizan_llaves_cuando_el_bloque_contiene_m_s_de_una_l_nea_de_c_digo_en_este_caso_solo_la_primera_l_nea_se_considerar_dentro_del_if_lo_que_puede_causar_comportamientos_inesperados">Un error común en Java es omitir los paréntesis () en la condición, lo que generará un error de compilación. Otro problema puede surgir si no se utilizan llaves {} cuando el bloque contiene más de una línea de código; en este caso, solo la primera línea se considerará dentro del if, lo que puede causar comportamientos inesperados.</string>
    <string name="_3_sentencia_if_en_python_en_python_la_sentencia_if_tiene_una_estructura_m_s_concisa">3. Sentencia if en Python En Python, la sentencia if tiene una estructura más concisa:</string>
    <string name="aqu_no_es_obligatorio_usar_par_ntesis_alrededor_de_la_condici_n_aunque_se_permiten_el_bloque_de_c_digo_se_define_mediante_la_indentaci_n_lo_que_mejora_la_legibilidad_por_ejemplo_si_se_declara_x_10_y_luego_se_eval_a_if_x_5_el_mensaje_se_imprimir_porque_la_condici_n_es_verdadera"><![CDATA[Aquí no es obligatorio usar paréntesis alrededor de la condición, aunque se permiten. El bloque de código se define mediante la indentación, lo que mejora la legibilidad. Por ejemplo, si se declara x = 10 y luego se evalúa if x > 5:, el mensaje se imprimirá porque la condición es verdadera.]]></string>
    <string name="un_error_com_n_en_python_es_no_respetar_la_indentaci_n_lo_que_genera_un_indentationerror_adem_s_si_se_olvida_usar_al_final_de_la_l_nea_if_se_obtendr_un_error_de_sintaxis_es_crucial_mantener_una_indentaci_n_consistente_en_todo_el_bloque_ya_que_incluso_un_espacio_o_tabulaci_n_extra_puede_generar_errores">Un error común en Python es no respetar la indentación, lo que genera un IndentationError. Además, si se olvida usar : al final de la línea if, se obtendrá un error de sintaxis. Es crucial mantener una indentación consistente en todo el bloque, ya que incluso un espacio o tabulación extra puede generar errores.</string>
    <string name="en_java_errores_comunes_incluyen_no_usar_par_ntesis_en_la_condici_n_omitir_las_llaves_en_bloques_con_m_ltiples_l_neas">En Java, errores comunes incluyen: • No usar paréntesis () en la condición. • Omitir las llaves {} en bloques con múltiples líneas.</string>
    <string name="en_python_los_errores_m_s_frecuentes_son_indentaci_n_inconsistente_o_ausente_falta_del_car_cter_despu_s_de_la_condici_n_mezclar_espacios_y_tabulaciones_en_la_indentaci_n">En Python, los errores más frecuentes son: • Indentación inconsistente o ausente. • Falta del carácter : después de la condición. • Mezclar espacios y tabulaciones en la indentación.</string>
</resources>